--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <img src="images/6.png" alt="Image" id="topImage">
+  <img src="6.png" alt="Image" id="topImage">
   <h1>Trading Profitability Calculator</h1>
   <form id="calculatorForm">
     <label for="accountBalance">Starting Account Balance:</label>
